@@ -3,6 +3,7 @@ from os.path import abspath
 import re
 import sys
 import types
+import pickle
 try:
     import builtins
 except ImportError:
@@ -491,6 +492,10 @@ class TestDiscovery(unittest2.TestCase):
             test.my_package()
         self.assertEqual(import_calls, ['my_package'])
 
+        # Check picklability
+        for proto in range(pickle.HIGHEST_PROTOCOL + 1):
+            pickle.loads(pickle.dumps(test, proto))
+
     def test_discover_with_module_that_raises_SkipTest_on_import(self):
         loader = unittest.TestLoader()
 
@@ -526,6 +531,10 @@ class TestDiscovery(unittest2.TestCase):
         self.assertEqual(len(result.skipped), 1)
         self.assertEqual(result.testsRun, 1)
         self.assertEqual(import_calls, ['my_package'])
+
+        # Check picklability
+        for proto in range(pickle.HIGHEST_PROTOCOL + 1):
+            pickle.loads(pickle.dumps(suite, proto))
 
     def test_command_line_handling_parseArgs(self):
         # Haha - take that uninstantiable class
